# lirec

./: README
AgentMind/branches/FAtiMA-Modular/: ABUserOptionsAmy.txt  Amy.txt  Ardoot.bat  BoxB.txt  DVD.txt  Drools Installation and Setup (Core and IDE).html  Evui.bat  John.txt  LIRECOptionsAmy.txt  LIRECOptionsPaulie.txt  LIRECOptionsSusan.txt  LIRECOptionsUser.txt  Luke.bat  OptionsSimpleScenario.txt  Paulie.txt  (+17 more)
FacET/: Makefile
FacET/demo/: demo
FacET/inc/: facet.h
FacET/src/: components.cpp
HW/facedetect/: FaceDetect.cpp  FaceDetect.h  README
QMUL/: Face.cpp
UH/Modules-Samgar/PersonDetection/APS2.2/: CMakeLists.txt
UH/Modules-Samgar/PersonDetection/APS2.2/SourceFiles/: ActionApproach.h  LegsDetector.cpp  LegsDetector.h  SamClass.cpp  SamExample.cpp  SamModules.cpp  SamModules.h  Utility.h  fd-main.cpp  ld-main.cpp  pd-main.cpp  vCamera.cpp  vLaser.cpp  vRobot.cpp
UH/SAMGAR/SAMGAR Gui/: ALL_BUILD.vcproj  CMakeCache.txt  CMakeLists.txt  Project.sln  ToDo.txt
UH/SAMGAR/SAMGAR Gui/SourceFiles/: LogComponent.h
UH/SAMGAR/SAMGAR Gui/Trunk/: CMakeLists.txt  CMion_Interface.cpp
UH/SAMGAR/SAMGAR Gui/Trunk/SourceFiles/: Key.cpp  MainComponent.cpp  MainComponent.h
UH/SAMGAR/SAMGAR Gui/Trunk/Trunk/: CMakeLists.txt  SamgarKey.vcproj  ZERO_CHECK.vcproj  cmake_install.cmake
UH/SAMGAR/SAMGAR Gui/Trunk/Trunk/SourceFiles/: MainComponent.cpp
UH/SAMGAR/SAMGAR LIB/Trunk/: CMakeLists.txt  SamgarLIB.lib  ToDo.txt
UH/SAMGAR/SAMGAR LIB/Trunk/HeaderFiles/: SamgarMainClass-bug.h  UserVars.h
UH/SAMGAR/SAMGAR LIB/Trunk/Release/: SamgarLIB.lib  samgarlib.idb  samgarmigrate.idb  samgarrecive.idb  samgarreciveimage.idb  samgarsend.idb  samgarsendimage.idb  tester.idb  tester2.idb
UH/SAMGAR/SAMGAR LIB/Trunk/SourceFiles/: SAMGARMAIN.cpp
UH/SAMGAR/SAMGAR LIB/Trunk/TesterFiles/: SamgarMigrate.cpp  SamgarSend.cpp  Test.cpp
architecture/: .classpath  lirec_architecture.doc
architecture/architectureAddOns/: .classpath  .project
architecture/architectureLauncher/: .classpath  .project  ArchitectureConfiguration.xml  CompManagerRulesExample.xml  CompetencyLibraryInTheWild.xml  CompetencyLibraryTest.xml
architecture/architectureMain/: .project
architecture/cmionAddOns/: .project
architecture/cmionLauncher/: .project  CompManagerRulesExample.xml  CompManagerRulesInTheWild.xml  CompManagerRulesTest.xml  CompetencyLibrary.dtd  CompetencyLibraryTest.xml
architecture/cmionMain/: .project
architecture/fatima-bin/: ArchitectureTestAgent.bat  SpiritOfTheBuilding-Log.txt
example-project/trunk/: testfile.txt
level2/competencies/RobotHouse/: CHokuyoURG.h  CMakeLists.txt  ExampleOne.h  MapUpdater - Copy (2).h  MapUpdater - Copy (3).h  MapUpdater - Copy.h  MapUpdater - SIMPLE WORKS.h  MapUpdater.h  PathPlanner.h  PlaySounds.h  ROBOT.cpp  VirtualCamera.h  VirtualRobot.h  Vlaser.h
level2/competencies/SamgarV1Modules/Navi-Robot-uh/: CMakeLists.txt  Kyron_VirtualRobot.cpp  MapControl.cpp  MapHelper.cpp  MapHelper.h  O_VirtualRobot.cpp  VirtualRobot.cpp
level2/competencies/SamgarV1Modules/expressive-behaviours-uh/: CMakeLists.txt  KhengleePioneerBehaviourConIns.txt  L1PioneerDisplay.cpp  L2ExpressiveBehaviour.cpp  L2PioneerDisplay.cpp  L2PioneerPhysical.cpp  L2PioneerSound.cpp
libs/SAMGAR V2/: INSTALL.txt  INSTALL_Linux.txt
libs/SAMGAR V2/Module/: CMakeLists - Copy.txt  CMakeLists.txt  ExampleOne.cpp  ExampleOne.h  InteruptOverlay.h  SamClass.cpp  SamClass.h  SamExample.cpp  VideoGet.cpp  VideoGet.h  VideoSend.cpp  VideoSend.h
libs/SAMGAR/trunk/Modules/: CMakeLists.txt  README.txt
libs/SAMGAR/trunk/Modules/Examples/: CMakeLists.txt
libs/SAMGAR/trunk/Modules/Samgar2Player/: CMakeLists.txt  PROTOCOL.txt  Player2SamgarModule.cpp  Player2SamgarModule.h  Player2SamgarThread.cpp  Player2SamgarThread.h  PlayerSamgarModule.cpp  PlayerSamgarModule.h  PlayerSamgarThread.cpp  PlayerSamgarThread.h  README.txt  Samgar2Player.cpp
libs/SAMGAR/trunk/Modules/SamgarModule/: CMakeLists.txt  SamClass.h
libs/Samgar/Gui/: CMakeLists.txt  README_linux
libs/Samgar/Gui/SourceFiles/: MainComponent.cpp
libs/Samgar/Libs+examples/: CMakeLists.txt
libs/Samgar/Libs+examples/HeaderFiles/: SamgarMainClass.h
libs/Samgar/Libs+examples/SourceFiles/: SAMGARMAIN.cpp
libs/Samgar/Libs+examples/TesterFiles/: SamgarMigrate.cpp  SamgarReciveImage.cpp  SamgarSend.cpp  SamgarSendImage.cpp
libs/cmion/: .classpath  .project  build.xml  cmion.doc  todo list.txt
libs/ion/: build.xml
libs/libSamgar/: CMakeLists.txt
libs/libSamgar/examples/: SamgarMove.cpp  SamgarSendImage.cpp
libs/libSamgar/inc/: SamgarVars.h
libs/libSamgar/src/: Samgar.cpp
libs/magicsquares/: Doxyfile  Makefile  README
libs/suds/: Makefile
scenarios/GerminationX/: README
scenarios/PersonalGuide/: .classpath  .project  AndroidManifest.xml
scenarios/RobotHouse/SamgarModules/: CMakeLists.txt  LicenseInfo.txt  README.txt
scenarios/RobotHouse/SamgarModules/SourceFiles/: Comm.cpp  FakeGeo.cpp  GiveCords.cpp  GridmapExperiment.cpp  Intel.cpp  MapBuilder-localise&buildPerfect.cpp  MapBuilder.cpp  MapBuildertest.cpp  StdAfx.cpp  StdAfx.h  Stepper.cpp  VStarGazer.cpp  VirtualLaser.cpp  VirtualRobot.cpp  WaypointGoto.cpp  comm.h  icp-slam_main.cpp
scenarios/TeamBuddy/: ArchitectureConfiguration.xml  Steps to start the example program.docx
scenarios/TeamBuddy/SAMGAR/: CMakeLists.txt
scenarios/TeamBuddy/SAMGAR/SourceFiles/: SAMGARMAIN.cpp
scenarios/TeamBuddy/SAMGAR/TesterFiles/: SamgarFaceDetect.cpp  SamgarMove.cpp  SamgarRecive.cpp  SamgarReciveImage.cpp  SamgarSendImage.cpp
scenarios/TeamBuddy/SAMGAR/release/: SamgarLIB.lib  samgarfacedetect.idb  samgarlib.idb  samgarmigrate.idb  samgarmove.idb  samgarrecive.idb  samgarsend.idb  samgarsendimage.idb
scenarios/TeamBuddy/Source Modules C++/: CMakeLists.txt  CircleDetect.cpp  EMYSSender.cpp  ExampleOne.h  FaceDetect.cpp  GoToNavigation.cpp  InteruptOverlay.h  MapUpdater.h  Navigation.cpp  PhidgetSensor.cpp  Project.sln  README.txt  ROBOT.cpp  SamClass.h  SamExample.cpp  VStarGazer.cpp  VirtualRobot.h  Vlaser.cpp  directMotion.cpp  phidget21.h  phidget21.lib
(+2924 files in other folders)
